embedded-agent-widget stages 01-04: Java 11 + launcher refactor + settings + silent journal
Groundwork for the embedded-agent-widget plan (docs/embedded-agent-widget/).
Four shared-architecture stages. No user-visible change yet — the
terminal card and rail land in later stages.

Stage 01 — toolchain bump
- pom.xml: source/target/release all bumped to 11 (overrides pom-scijava
  BOM which sets maven.compiler.release=8 and trumps source/target).
- ConversationLoop.java: javax.xml.bind.DatatypeConverter -> java.util.Base64.
- Kotlin pin deferred to stage 05; 2.1.21 breaks resolution while
  pom-scijava still references the retired kotlin-stdlib-common.

Stage 02 — launcher / session refactor
- New AgentSession interface, AgentLaunchSpec data class, ExternalAgentSession
  detached-stub impl.
- New ChatSurface facade in ui/; ConversationLoop field widened to
  ChatSurface (ChatPanel implements both ChatPanelController and
  ChatSurface). ImageJAIPlugin.startTcpServer takes both as separate
  params — no instanceof cast (Codex review fix).
- AgentLauncher gets Mode enum + launch(Info, Mode) returning
  AgentSession. Mode.EMBEDDED throws UnsupportedOperationException
  until stage 05. Legacy launchAgent(Info) kept as @Deprecated delegate.

Stage 03 — Settings, port collision, NOTICE
- Settings.agentEmbeddedTerminal (default false — migration-safe).
- ImageJAIPlugin.findFreeTcpPort scans preferred..preferred+4 and
  writes chosen port back to settings.tcpPort.
- META-INF/NOTICE.md with LGPL/EPL attributions (final content in 05).
- SettingsDialog embedded-terminal checkbox deferred to stage 06.

Stage 04 — silent session code journal
- SessionCodeJournal singleton + CodeAutoNamer (leading comment ->
  composite run(...) signature -> first defined symbol -> timestamp).
- 200-entry ring, daemon executor writes AI_Exports/.session/code/.
- TCPCommandServer hook calls were folded into c348c74 ahead of this
  commit — no journal-facing changes in this commit.
- Codex review imp